房间设施图标间距调整

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -20,7 +20,7 @@
                         </p>
                     </div>
                 </div>
-                <hr ms-if="!type" style="width: 95%;margin-top: 0px;margin-bottom: 0;">
+                <hr style="width: 95%;margin-top: 0px;margin-bottom: 0;">
                 <div class="swiper-container swiper4 room-amenity" style="padding: 0 10px;">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide room-amenity-item" ms-repeat="room.amenityList" data-repeat-rendered="swiper4Render">
