注册页提交

--- a/js/pages/register/register-1.html
+++ b/js/pages/register/register-1.html
@@ -28,7 +28,7 @@
 		border: 1px solid black !important;
 	}
 </style>
-<div style="background: url('img/reg-bg.png') center;background-size: cover;height: 100vh;width: 100vw;padding: 50px;">
+<div style="background: url('img/reg-bg.jpg') center;background-size: cover;height: 100vh;width: 100vw;padding: 50px;">
 	<div class="mui-text-center" style="margin:0 auto;" ms-controller="phone">
 		<br />
 	    <input type="tel" placeholder="输入手机号码" ms-duplex="phone" id="ipt">
