--- a/js/pages/franchisee/record.html
+++ b/js/pages/franchisee/record.html
@@ -1,7 +1,7 @@
 <div id="pullrefresh" class="mui-scroll-wrapper">
     <div class="mui-scroll">
         <div class="bs-bg-white bs-text-larger fr-padding-20">交易记录</div>
-        <div class="bs-bg-white bs-text-large" ms-controller="chart">
+        <div class="bs-bg-white bs-text-large ms-controller" ms-controller="chart">
             <div class="fr-flex" style="border-bottom: 1px solid #ddd;" ms-for="el in @list">
                 <div class="today-list-item">
                     {{el.description}}
