--- a/js/pages/franchisee/today.html
+++ b/js/pages/franchisee/today.html
@@ -1,5 +1,5 @@
 
-<header class="bs-bg-dark fr-flex mui-scroll-wrapper" style="z-index: 5;bottom: inherit;" ms-controller="header">
+<header class="bs-bg-dark fr-flex mui-scroll-wrapper ms-controller" style="z-index: 5;bottom: inherit;" ms-controller="header">
     <div class="fr-padding-20 bs-text-gray">
         <span class="bs-text-normal">{{@date}}详情</span>
         <br>
@@ -13,7 +13,7 @@
 </header>
 <div id="pullrefresh" class="mui-scroll-wrapper" style="top: 87px;">
     <div class="mui-scroll">
-        <section class="bs-bg-white bs-text-large" ms-controller="chart">
+        <section class="bs-bg-white bs-text-large ms-controller" ms-controller="chart">
             <!-- <div class="fr-flex" style="border-bottom: 1px solid #ddd;">
                 <div class="today-list-item">
                     暂无数据
