提交会员卡相关页面 修改有两个按钮的弹框，按钮样式

--- a/js/pages/promotion/apply.html
+++ b/js/pages/promotion/apply.html
@@ -18,5 +18,5 @@
         </div>
     </section>
 
-    <button class="bs-text-bolder bs-text-white bs-bg-black" style="font-size: 18px;width: 100vw;border: none;border-radius: 0;height: 50px;" :click="@goDetail">申请加入</button>
+    <button class="nav-bottom-btn" :click="@goDetail">申请加入</button>
 </div>
