--- a/js/pages/room/article-info.html
+++ b/js/pages/room/article-info.html
@@ -25,11 +25,7 @@
 .mui-numbox [class*=numbox-btn] {
     width: 32px;
 }
-.hiddenbox {
-    margin: 0 20px 0 0;
-    position: absolute;
-    right: 0;
-}
+
 .checked {
     background-image: url(img/checked-w.png);
 }
@@ -41,8 +37,11 @@
 	display: flex;
 	justify-content: space-between;
 }
+.check-icon {
+    position: inherit;
+}
 </style>
-<div ms-controller="aInfo" style="margin: 0 9px 0 9px;/* overflow-y: auto;*/ height: 80vh;">
+<div ms-controller="aInfo" style="overflow-y: auto;height: 80vh;">
     <img ms-if="type == 1"  ms-attr-src="urlAPINet + goods.imgUrl" style="height: 220px;" width="100%"><!-- 店内商品 --> 
     <img ms-if="!(type == 1)" ms-attr-src="urlAPINet + goods.picUrl" style="height: 220px;" width="100%"> <!-- 店内服务 --> 
     <div class="article-info" style="margin: 7px 11px 0;">
@@ -71,15 +70,11 @@
                 <div class="order-panel-title bs-text-large bs-text-white">支付方式</div>
                 <div class="pay" ms-click="newRadio1" style="margin-bottom: 15px;">
                 	<div class="bs-text-normal bs-text-white">微信支付</div>
-                	<div class="hiddenbox">
-                		<div class="check-icon" ms-class-1="unchecked:payType == 1" ms-class-2="checked:payType == 2" style="position: absolute; right: 5px;"></div>
-                	</div>
+            		<div class="check-icon" ms-class-1="unchecked:payType == 1" ms-class-2="checked:payType == 2" ></div>
                 </div>
                 <div class="pay" ms-click="newRadio2">
                     <div class="bs-text-normal bs-text-white">支付宝支付</div>
-                    <div class="hiddenbox">
-                        <div class="check-icon" ms-class-1="unchecked:payType == 2" ms-class-2="checked:payType == 1" style="position: absolute; right: 5px;"></div>
-                    </div>
+                    <div class="check-icon" ms-class-1="unchecked:payType == 2" ms-class-2="checked:payType == 1"></div>
                 </div>
             </div>
         </hgroup>
