--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -28,23 +28,6 @@
     padding: 8px;
 }
 
-.font {
-    font-size: 13px;
-}
-
-.checked {
-    background-image: url(img/checked.png);
-}
-
-.unchecked {
-    background-image: url(img/unchecked.png);
-}
-
-.hiddenbox {
-    margin: 0 20px 0 0;
-    position: absolute;
-    right: 0;
-}
 .mui-toast-container {
     bottom: 50px;
 }
@@ -158,7 +141,7 @@ input[type=checkbox] {
             </div>
             <div>&nbsp;</div>
         </div>
-        <div class="order-panel font" ms-if="data.status==1">
+        <div class="order-panel bs-text-small" ms-if="data.status==1">
             <div class="order-panel-title bs-text-large bs-text-153">支付方式</div>
             <div ms-click="newRadio1" style="margin-bottom: 10px;">
                 <div class="hiddenbox">
@@ -170,7 +153,7 @@ input[type=checkbox] {
                 <div class="hiddenbox">
                     <div class="check-icon" ms-class-1="unchecked:payType == 2" ms-class-2="checked:payType == 1" style="position: absolute; right: 5px;"></div>
                 </div>
-                <span class="bs-text-normal bs-text-black">支付宝支付</span>
+                <span class="bs-text-normal bs-text-black">支付宝支付（请在浏览器中打开）</span>
             </div>
         </div>
         <br>
