修改ios微信的bug：外层元素上的 click 事件不响应，数字自动识别为手机号

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -2,7 +2,7 @@
     <div class="card-frame">
         <img class="card-buy-img" :attr="{src:@data[cardType-1].imgUrl}" alt="">
         <section style="padding: 8px 0 10px 10px;">
-            <div class="bs-text-red bs-text-larger" style="padding-bottom: 25px;">¥{{@data[cardType-1].price}}</div>
+            <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 25px;">¥{{@data[cardType-1].price}}</div>
             <div class="bs-text-smaller bs-text-51">本宿会员{{@data[cardType-1].name}}，限时抢购</div>
         </section>
         <img class="card-buy-img" :attr="{src:@data[cardType-1].discountUrl}" alt="">
