--- a/js/pages/card/show.html
+++ b/js/pages/card/show.html
@@ -1,3 +1,4 @@
+<meta name="format-detection" content="telephone=no">
 <div class="card-frame ms-controller" :controller="cardShow" style="padding: 3vw;">
     <div class="card-show" :css="{'background-image': 'url(' + @getType() + ')'}">
         <div class="card-font">
