增加钱包相关页面 修改个人中心样式

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -10,23 +10,23 @@
         <img class="card-buy-img" :attr="{src:@data[cardType-1].promoteUrl}" alt="">
 
         <section class="bs-text-small bs-text-51" style="padding: 20px 10px;">
-            <div :click="@chooseType(2)" style="margin-bottom: 15px;">
+            <div style="margin-bottom: 15px;" :on-tap="@chooseType(2)">
                 <div class="hiddenbox">
-                    <div class="check-icon" :class="@payType == 2?'checked':'unchecked'" style="position: absolute; right: 0px;"></div>
+                    <div class="check-icon" :class="@payType == 2?'checked':'unchecked'" style="position: absolute; right: 0px;" :on-tap="@chooseType(2)"></div>
                 </div>
-                <span>微信支付</span>
+                <span :on-tap="@chooseType(2)">微信支付</span>
             </div>
-            <div :click="@chooseType(1)">
+            <div :on-tap="@chooseType(1)">
                 <div class="hiddenbox">
-                    <div class="check-icon" :class="@payType == 1?'checked':'unchecked'" style="position: absolute; right: 0px;"></div>
+                    <div class="check-icon" :class="@payType == 1?'checked':'unchecked'" style="position: absolute; right: 0px;" :on-tap="@chooseType(1)" ></div>
                 </div>
-                <span>支付宝支付（请在浏览器中打开）</span>
+                <span :on-tap="@chooseType(1)" >支付宝支付（请在浏览器中打开）</span>
             </div>
-            <div class="bs-text-small" style="padding-top: 30px;" :on-tap="@clickIsAgree">
+            <div class="bs-text-small" style="margin-top: 30px;" :on-tap="@clickIsAgree">
                 <span :class="['isAgree', @isAgree?'checked':'unchecked']"></span> 我同意
                 <span class="bs-text-gold" :on-tap="@openRule">本宿会员条款</span>
             </div>
         </section>
     </div>
-    <button class="nav-bottom-btn" :click="@goCard">确认购买</button>
+    <button class="nav-bottom-btn" type="button" :on-tap="@goCard">确认购买</button>
 </div>
