--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -89,6 +89,13 @@
         </ul>
         <ul class="mui-table-view">
             <li class="mui-table-view-cell">
+                <a href="promotion-apply.html" class="mui-navigate-right">
+                    <span class="bs-text-small nav-title">本宿推广大使</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="mui-table-view" style="margin-top: 6px;">
+            <li class="mui-table-view-cell">
                 <a href="special.html" class="mui-navigate-right">
                     <span class="bs-text-small nav-title">午夜特价房</span>
                 </a>
