--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -2,11 +2,15 @@
     <div class="content">
         <div class="mui-text-center bs-bg-white" style="padding-top: 20px;">
             <div class="circle" style="width: 104px;height: 104px;margin: 0px auto 8px auto;border: 1px solid #baa074;">    
-                <div class="circle" style="margin: 0 auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;" ms-css-background-image='url({{headImg}})' ms-on-touchend="changeImg">
+                <div class="circle" style="margin: 0 auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;" ms-css-background-image='url({{headImg}})' ms-on-tap="changeImg">
                     <img src="../img/edit-small.png" style="position: absolute;background: #fff;border-radius: 50%;bottom: 2px;left: 72px;width: 18px;"/>
                 </div>
-           </div> 
-            <div class="bs-text-large" style="font-weight: lighter;padding-bottom: 10px;">{{nickName}}</div>
+            </div> 
+            <!-- <div class="bs-text-large" style="font-weight: lighter;padding-bottom: 10px;">{{nickName}}</div> -->
+            <div style="padding-bottom: 5px;">
+                <img src="../img/card/card_black.svg" style="width:22px;margin-right: 12px" alt="" ms-on-tap="goCard(1)">
+                <img src="../img/card/card_null.svg" style="width:22px;" alt="" ms-on-tap="goCard(0)">
+            </div>
         </div>
 
         <div class="control bs-bg-black bs-text-white">
@@ -30,7 +34,7 @@
             </div> 
         </div>
 
-        <div class="bs-bg-white" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
+        <div class="bs-bg-white" style="display: flex;flex-flow: row wrap;align-content: flex-start;">
             <div class="center-nav-item" ms-on-tap="clickA(3)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/service.png" class="grid-icon" />
@@ -57,23 +61,26 @@
             </div>
             <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance&&!isManage">
                 <a href="javascript:void(0)" >
-                    <img src="../img/icon/switch.png" class="grid-icon" />
-                    <div class="bs-text-smaller bs-text-black">我的酒店</div>
+                    <img src="../img/iconfont-jiudian.svg" class="grid-icon" />
+                    <div class="bs-text-smaller bs-text-black">鸿鹄伙伴</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-visible="!isAlliance&&!isManage"></div>
             <div class="center-nav-item" ms-on-tap="clickA(5)" ms-visible="isAdmin&&!isManage">
                 <a href="javascript:void(0)" >
                     <img src="../img/icon/switch.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">管理模式</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-visible="!isAdmin&&!isManage">
+            <div class="center-nav-item" ms-on-tap="clickA(9)" ms-visible="!isManage">
+                <img src="../img/icon/fund.png" class="grid-icon" />
+                <div class="bs-text-smaller bs-text-black">钱包</div>
+            </div>
+            <!-- <div class="center-nav-item" ms-visible="!isAdmin&&!isManage"> -->
                 <!-- <a href="javascript:void(0)">
                     <img src="../img/icon/shopping.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">购物</div>
                 </a>-->
-            </div> 
+            <!-- </div>  -->
             <!-- <div class="center-nav-item" ms-visible="isAdmin!=1&&!isManage">
                 <a href="javascript:void(0)" style="display: none;">
                     <img src="../img/icon/switch.png" class="grid-icon" />
